[build-system]
requires = [
    "scikit-build-core >=0.11",
    "wheel",
    "cmake>=3.18",
    "nanobind >=1.3.2",
    # Required for nanobind stub generation on Python < 3.11
    'typing_extensions >=4.12;python_version<"3.11"',
]
build-backend = "scikit_build_core.build"

[project]
name = "zxing-cpp"
#dynamic = ["version"]
version = "3.0.0"
description = "Python bindings for the zxing-cpp barcode library"
readme = "README.md"
authors = [
    { name = "ZXing-C++ Community", email = "zxingcpp@gmail.com" },
]
license = "Apache-2.0"
keywords = ["barcode"]
requires-python = ">=3.9"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics",
]

[project.urls]
Homepage = "https://github.com/zxing-cpp/zxing-cpp"

[tool.setuptools]
include-package-data = false

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

# Workaround: Force CMake to run during sdist generation.
# This triggers the logic in CMakeLists.txt that dereferences symlinks (e.g. core/, zxing.cmake)
# and copies actual files into the source tree, ensuring the sdist is self-contained and usable
# on systems without symlink support (Windows) or outside the git repo.
sdist.cmake = true

# [tool.setuptools_scm]
# root = "../.."
# version_scheme = "guess-next-dev"
# local_scheme = "no-local-version"
# tag_regex = "^v?(\\d+\\.\\d+\\.\\d+)"
# fallback_version = "0.0.0"
# write_to = "zxingcpp/_version.py"
