[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0", "cmake>=3.18"]
build-backend = "scikit_build_core.build"

[project]
name = "zxing-cpp"
version = "3.0.0"
description = "Python bindings for the zxing-cpp barcode library"
readme = "README.md"
authors = [
    { name = "zxing-cpp community", email = "zxingcpp@gmail.com" },
]
license = "Apache-2.0"
keywords = ["barcode"]
requires-python = ">=3.9"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics",
]

[project.urls]
Homepage = "https://github.com/zxing-cpp/zxing-cpp"
Repository = "https://github.com/zxing-cpp/zxing-cpp.git"
Issues = "https://github.com/zxing-cpp/zxing-cpp/issues"

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = []
wheel.license-files = ["../../LICENSE"]
sdist.exclude = ["LICENSE", "zxing.cmake"]
sdist.include = [
    "zxingcpp/__init__.py",
    "zxingcpp/py.typed",
    "zxingcpp/_zxingcpp_core.pyi",
]
