[package]
name = "zxing-cpp"
version = "0.2.2"
edition = "2021"
# authors = ["Axel Waggershauser <zxingcpp@gmail.com>"]
license = "Apache-2.0"
description = "A rust wrapper for the zxing-cpp barcode library."
repository = "https://github.com/zxing-cpp/zxing-cpp/"
readme = "README.md"
keywords = ["zxing", "barcode", "barcode_reader", "ffi"]
categories = ["api-bindings", "computer-vision"]
exclude = [
    "core/**/*Write*",
    "core/**/*Encode*",
]

[features]
default = []
image = ["dep:image"]
bundled = []

[dependencies]
paste = "1.0.14"
flagset = "0.4.4"
image = {version = "0.24.8", optional = true}

[dev-dependencies]
cfg-if = "1.0.0"
anyhow = "1.0.79"
clap = {version = "4.4.13", features = ["derive"]}
image = {version = "0.24.8"}

[build-dependencies]
cmake = {version = "0.1.50"}
miette = {version = "5.10.0", features = ["fancy"]}
